# astobf

./: .gitignore  README.md  pyproject.toml
src/astobf/: __init__.py  __main__.py  constants.py  name_obf.py
